modification des sections et des listes des récompenses

--- a/fansite1.html
+++ b/fansite1.html
@@ -19,7 +19,7 @@
     <header class="headerNavbar">
         <nav class="navbar">
             <div class="limonade">
-                <img src="./images/logo-blackpink.png" alt="Logo de blackpink" class="logo" height="30px">
+                <img src="./images/limonade_logo.svg" alt="Logo de limonade" class="logo">
             </div>
             <div class="nav-link">
                 <ul>
@@ -39,80 +39,48 @@
     <main>
         <section>
             <article>
-                <figure>
-                    <img src="./images/blackpink13.jpg" alt="Blackpink kill this love">
-                    <figcaption>Blackpink kill this love</figcaption>
-                  </figure>
-                <h2>Formation du groupe</h2>
-                <p>Suite au succès important de son groupe phare <strong>2NE1</strong>, l'agence <strong>YG Entertainment</strong> annonçait depuis plusieurs années
-                    déjà le lancement d'un nouveau groupe féminin qui viendrait continuer la "success story" de ses prédécesseurs.
-                    Reste que malgré quelques noms de "potentiels" membres du groupe, Yang Hyeon Seok ne semblait pas vraiment pressé
-                    de le faire débuter. Annonçant successivement plusieurs dates de débuts allant de 2011 à 2015, il est vrai
-                    qu'entre-temps, le chef du célèbre label a eu beaucoup à faire. Entre les divers comebacks et promotions
-                    de ses artistes tels que BIGBANG et 2NE1, il a aussi recruté plusieurs anciens participants de "KpopStar"
-                    (Lee Hi, AKMU) et lancé deux nouveaux groupes masculins : WINNER et iKON.
-                </p>
-                <p>Le <em>29 juin 2016</em>, le label annonce le lancement de <strong>BLACKPINK</strong>, son nouveau girlsband. YG explique ce nom par
-                    le fait que "les membres sont toutes jolies mais pas seulement" et "qu'elles ne sont pas ce qu'elles paraissent
-                    être."
-                    De plus, YG affirme que "Cela fait tellement longtemps qu'elles sont amies que le fait d'avoir un leader est
-                    impossible". BLACKPINK n'a donc pas de leader.</p>
+                <img src="./images_blackping/blackpink12.jpg" alt="Blackpink kill this love">
+                <div class="content">
+                    <header><h2>Formation du groupe</h2></header>
+                    <p>Suite au succès important de son groupe phare <strong>2NE1</strong>, l'agence <strong>YG Entertainment</strong> annonçait depuis plusieurs années
+                        déjà le lancement d'un nouveau groupe féminin qui viendrait continuer la "success story" de ses prédécesseurs.
+                        Reste que malgré quelques noms de "potentiels" membres du groupe, Yang Hyeon Seok ne semblait pas vraiment pressé
+                        de le faire débuter. Annonçant successivement plusieurs dates de débuts allant de 2011 à 2015, il est vrai
+                        qu'entre-temps, le chef du célèbre label a eu beaucoup à faire. Entre les divers comebacks et promotions
+                        de ses artistes tels que BIGBANG et 2NE1, il a aussi recruté plusieurs anciens participants de "KpopStar"
+                        (Lee Hi, AKMU) et lancé deux nouveaux groupes masculins : WINNER et iKON.
+                    </p>
+                    <p>Le <em>29 juin 2016</em>, le label annonce le lancement de <strong>BLACKPINK</strong>, son nouveau girlsband. YG explique ce nom par
+                        le fait que "les membres sont toutes jolies mais pas seulement" et "qu'elles ne sont pas ce qu'elles paraissent
+                        être."
+                        De plus, YG affirme que "Cela fait tellement longtemps qu'elles sont amies que le fait d'avoir un leader est
+                        impossible". BLACKPINK n'a donc pas de leader.</p>
 
-                <p>La conception du groupe a beaucoup évolué avant sa forme finale. Au départ, Yang Hyeon Seok
-                    voulait lancer un groupe de 9 membres mais après réflexion, il a préféré réduire le nombre pour 
-                    se focaliser sur les compétences de chacunes. Il faut aussi noter qu'entre 2014 et 2016, énormément
-                    de groupes avec des effectifs importants ont débutés. Les rumeurs annonçaient 5 membres pour
-                    finalement découvrir 4 jeunes filles âgées de 18 à 21 ans choisies parmie une cinquantaine de trainees.
-                </p>
+                    <p>La conception du groupe a beaucoup évolué avant sa forme finale. Au départ, Yang Hyeon Seok
+                        voulait lancer un groupe de 9 membres mais après réflexion, il a préféré réduire le nombre pour 
+                        se focaliser sur les compétences de chacunes. Il faut aussi noter qu'entre 2014 et 2016, énormément
+                        de groupes avec des effectifs importants ont débutés. Les rumeurs annonçaient 5 membres pour
+                        finalement découvrir 4 jeunes filles âgées de 18 à 21 ans choisies parmie une cinquantaine de trainees.
+                    </p>
 
-                <p><strong>Ji Soo</strong> est apparue dans plusieurs clips, le Drama "Producers" aux côtés de Dara ou encore
-                    dans des campagnes de publicités pour "Samsonite Red" ou "Nikon". <strong>Lisa</strong>, de nationalité thaïlandaise,
-                    parle aussi anglais, coréen et japonais. <strong>Jennie</strong> est apparue dans plusieurs clips et a déjà collaboré
-                    avec des artistes de la YG FAMILY. Enfin, <strong>Rosé</strong> est australienne et s'est rendue en Corée du Sud pour
-                    accomplir son rêve d'être chanteuse.
-                </p>
-            </article>
-            <article>
-                <figure>
-                    <img src="./images/blackpink13.jpg" alt="Blackpink kill this love">
-                    <figcaption>Blackpink kill this love</figcaption>
-                  </figure>
-                <h2>Lancement</h2>
-                <p>
-                    Après une série de teasers, c'est le 4 août 2016 que des articles annoncent les débuts officiels du groupe
-                    avec deux singles, sortis le 8 août, intitulés "Whistle" et "BOOMBAYAH".
-                </p>
-                <p>
-                    Le 21 aout, soit 13 jours après leurs débuts, elles remportent leur premier trophée à l'Inkigayo et
-                    obtiennent rapidement leur première victoire sur les plateaux musicaux.
-                </p>
-                
-                <h3>SQUARE TWO</h3>
-                <p>
-                    Le groupe fait son comeback, le 1er novembre avec une ballade pop country, "STAY" et une musique
-                    éléctro-dance "Playing With Fire". En plus des deux singles digital est rajouté la version acoustique
-                    de "Whistle". Le comeback est un gros succès, poursuivant la lignée de <strong>"SQUARE ONE"</strong>.
-                </p>    
-
-                <h3>AS IF IT'S YOUR LAST</h3>
-                <p>
-                    Le 22 juin 2017, <strong>BLACKPINK</strong> est de retour avec son troisième comeback intitulé <strong>AS IF IT'S YOUR LAST</strong>
-                    et se place très rapidement #1 des charts. Cette musique est décrite comme un son mélangeant house,
-                    reggae et moombahton. Ce comeback est considéré comme la première chanson <strong>"PINK"</strong>, Ji Soo considérant
-                    que tous les comeback précédents était <strong>"BLACK"</strong>.
-                </p>
-
-                    <h3>SQUARE UP, premier mini-album</h3>
-                <p>
-                    Après un an d'attente, BLACKPINK fait son grand retour sur scène avec la sortie du premier mini-album nommé SQUARE UP composé de 4 musiques, DDU-DU-DDU-DU, Forever Young[i], [i]Really et See You Later. L'accueil de ce mini-album est très bon, se plaçant très vite en #1 des charts et effectuant de Perfect Kill. Le clip de DDU-DU-DDU-DU battra le record de vues d'un groupe féminin de K-pop en 24 heures avec plus de 36m de vues. Ce comeback marquera aussi l'ouverture des comptes Instagram des membres.
-                </p>
+                    <p><strong>Ji Soo</strong> est apparue dans plusieurs clips, le Drama "Producers" aux côtés de Dara ou encore
+                        dans des campagnes de publicités pour "Samsonite Red" ou "Nikon". <strong>Lisa</strong>, de nationalité thaïlandaise,
+                        parle aussi anglais, coréen et japonais. <strong>Jennie</strong> est apparue dans plusieurs clips et a déjà collaboré
+                        avec des artistes de la YG FAMILY. Enfin, <strong>Rosé</strong> est australienne et s'est rendue en Corée du Sud pour
+                        accomplir son rêve d'être chanteuse.
+                    </p>
+                </div>
             </article>
         </section>
         <section>
             <article>
-                <h2>
+                <header>
+                    <img src="./images_blackping/trophy.svg" alt="Trophy icon">
+                    <h2>
                     Les récompenses
-                </h2>
+                    </h2>
+                </header>
+                <div id="awards">
                 <h3>2023</h3>
                 <ul>
                     <li>Golden Disc Awards : Album Division "BORN PINK"</li>
@@ -208,8 +176,78 @@
                     <li>MelOn Music Awards : New Artist Of The Year</li>
                     <li>Asia Artist Awards : Rookie Of The Year</li>
                 </ul>
+            </div>
+            </article>
+        </section>
+        <section>
+            <article>
+                <header>
+                    <img src="./images_blackping/start.svg" alt="Start icon">
+                    <h2>Lancement</h2>
+                </header>
+                <p>
+                    Après une série de teasers, c'est le 4 août 2016 que des articles annoncent les débuts officiels du groupe
+                    avec deux singles, sortis le 8 août, intitulés "Whistle" et "BOOMBAYAH".
+                </p>
+                <p>
+                    Le 21 aout, soit 13 jours après leurs débuts, elles remportent leur premier trophée à l'Inkigayo et
+                    obtiennent rapidement leur première victoire sur les plateaux musicaux.
+                </p>
+                
+                <h3>SQUARE TWO</h3>
+                <p>
+                    Le groupe fait son comeback, le 1er novembre avec une ballade pop country, "STAY" et une musique
+                    éléctro-dance "Playing With Fire". En plus des deux singles digital est rajouté la version acoustique
+                    de "Whistle". Le comeback est un gros succès, poursuivant la lignée de <strong>"SQUARE ONE"</strong>.
+                </p>    
+
+                <h3>AS IF IT'S YOUR LAST</h3>
+                <p>
+                    Le 22 juin 2017, <strong>BLACKPINK</strong> est de retour avec son troisième comeback intitulé <strong>AS IF IT'S YOUR LAST</strong>
+                    et se place très rapidement #1 des charts. Cette musique est décrite comme un son mélangeant house,
+                    reggae et moombahton. Ce comeback est considéré comme la première chanson <strong>"PINK"</strong>, Ji Soo considérant
+                    que tous les comeback précédents était <strong>"BLACK"</strong>.
+                </p>
+
+                    <h3>SQUARE UP, premier mini-album</h3>
+                <p>
+                    Après un an d'attente, BLACKPINK fait son grand retour sur scène avec la sortie du premier mini-album nommé SQUARE UP composé de 4 musiques, DDU-DU-DDU-DU, Forever Young[i], [i]Really et See You Later. L'accueil de ce mini-album est très bon, se plaçant très vite en #1 des charts et effectuant de Perfect Kill. Le clip de DDU-DU-DDU-DU battra le record de vues d'un groupe féminin de K-pop en 24 heures avec plus de 36m de vues. Ce comeback marquera aussi l'ouverture des comptes Instagram des membres.
+                </p>
             </article>
         </section>
     </main>
+    <footer>
+        <section class="planSite">
+            <article class="menuFooter">
+                <h3>Bienvenue</h3>
+                <h3>Blackpink</h3>
+                <h3>EuroMillions</h3>
+                <h3>La Scaloneta</h3>
+                <h3>Contact</h3>
+            </article>
+            <article class="menuBlackpink">
+                <h4>Blackpink</h4>
+                <h5>Accueil</h5>
+                <h5>Lien 1</h5>
+                <h5>Lien 2</h5>
+                <h5>Lien 3</h5>
+            </article>
+            <article class="menuEuroMillions">
+                <h4>EuroMillions</h4>
+                <h5>Accueil</h5>
+                <h5>Lien 1</h5>
+                <h5>Lien 2</h5>
+                <h5>Lien 3</h5>
+            </article>
+            <article class="menuScaloneta">
+                <h4>La Scaloneta</h4>
+                <h5>Accueil</h5>
+                <h5>Lien 1</h5>
+                <h5>Lien 2</h5>
+                <h5>Lien 3</h5>
+            </article>
+        </section>
+        <p class="copyright">Limonade © 2024 - Tous droits réservés.</p>
+    </footer>
 </body>
 </html>
