--- a/fansite1.html
+++ b/fansite1.html
@@ -28,12 +28,14 @@
                     <li><a href="fansite3.html">Leurs tournées</a></li>
                     <li><a href="contact.html">Galerie</a></li>
                 </ul>
-            </div>
-            <div class="responsive">
+                <div class="responsive">
                 <input type="checkbox" id="menu-hamburger">
                 <label for="menu-hamburger"></label> 
+                </div>
             </div>
+            
         </nav>
+        <h1>Black Pink</h1>
     </header>
     
     <main>
