--- a/fansite3.html
+++ b/fansite3.html
@@ -31,7 +31,7 @@
                       <li class="active"><a href="index.html">Accueil</a></li>
                       <li><a href="histoire.html">Un peu d'histoire</a></li>
                       <li><a href="worldcup.html">FIFA World Cup 2022</a></li>
-                      <li><a href="celebrations.html">Le phénomène social</a></li>
+                      <li><a href="phenomene.html">Le phénomène social</a></li>
                       <li><a href="avenir.html">A venir</a></li>
                     </ul>
                 </div>
@@ -45,7 +45,7 @@
 
                 <article class="histoire">
                     <img src="./Images/scaloni.jpeg" alt="Lionel Scaloni">
-                    <div class="text">
+                    <div class="text"><a href="histoire.html">
                         <h2>Lionel Sebastián Scaloni</h2>
                         <p>Né le 16 mai 1978 à Rosario, province de Santa Fe, est un footballeur 
                             international argentin devenu entraîneur.
@@ -62,14 +62,13 @@
                             de l'AFA, Claudio Tapia, qui lui a apporté son soutien et également une 
                             option pour prolonger son contrat jusqu'à la Copa América 2020.
                         </p>
-                    </div>
+                    </a></div>
                     <img src="./Images/scaloneta.webp" alt="Image du bus de l'équipe d'Argentine" class="mobile">
-
                 </article>
 
                 <article class="worldcup">
                     <img src="./Images/coupe.png" alt="Coupe du monde" class="copa">
-                    <div class="text">
+                    <div class="text"><a href="worldcup.html">
                         <h2>FIFA World Cup 2022</h2>
                         <p>La Coupe du monde de football 2022 est la 22e édition de ce tournoi quadriennal. 
                             Organisée par la FIFA, elle se déroule au Qatar du 20 novembre au 18 décembre 2022, 
@@ -84,14 +83,14 @@
                             L'Argentine a été placée dans le groupe C, avec l'Arabie saoudite, le Mexique 
                             et la Pologne.
                         </p>
-                    </div>
+                    </a></div>
                     <img src="./Images/mascotte.png" alt="La'eeb, mascotte de la coupe du monde 2022" 
                     class="mascotte mobile">
                 </article>
 
                 <article class="phenomene">
                     <img src="./Images/bus5.webp" alt="Les champions du monde dans le bus">
-                    <div class="text">
+                    <div class="text"><a href="phenomene.html">
                         <h2>Le phénomène social</h2>
                         <p>Quatre millions d'Argentins pour célébrer Messi et sa bande et c'est la 
                             folie totale.
@@ -99,13 +98,13 @@
                             après la finale et la célébration du titre dans ses rues, Buenos Aires a 
                             vécu une journée absolument démentielle.
                         </p>
-                    </div>
+                    </a></div>
                     <img src="./Images/messi.webp" alt="Messi embrassant la coupe du monde" class="mobile">
                 </article>
 
                 <article class="avenir">
                     <img src="./Images/finalissima_25.jpeg" alt="Affiche de la Finalissima 2025">
-                    <div class="text">
+                    <div class="text"><a href="avenir.html">
                         <h2>A venir</h2>
                         <p>L'Espagne et l'Argentine devraient se rencontrer lors de l'édition 2025 
                             de la Finalissima, qui verra les vainqueurs de l'Euro 2024 affronter 
@@ -116,7 +115,7 @@
                             aux champions du monde en titre de conserver leur première place au 
                             classement FIFA.
                         </p>
-                    </div>
+                    </a></div>
                     <img src="./Images/eliminatorias_26.jpg" alt="Affiche des éliminatoires de la coupe du monde 2026" class="mobile">
                 </article>
 
@@ -151,7 +150,7 @@
                         <li><a href="index.html">Accueil</a></li>
                         <li><a href="histoire.html">Un peu d'histoire</a></li>
                         <li><a href="worldcup.html">FIFA World Cup 2022</a></li>
-                        <li><a href="celebrations.html">Le phénomène social</a></li>
+                        <li><a href="phenomene.html">Le phénomène social</a></li>
                         <li><a href="avenir.html">A venir</a></li>
                     </ul>
                 </article>
