--- a/fansite3.html
+++ b/fansite3.html
@@ -28,7 +28,7 @@
                 <div id="mySidepanel" class="sidepanel">
                     <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
                     <ul>
-                      <li class="active"><a href="index.html">Accueil</a></li>
+                      <li class="active"><a href="fansite3.html">Accueil</a></li>
                       <li><a href="histoire.html">Un peu d'histoire</a></li>
                       <li><a href="worldcup.html">FIFA World Cup 2022</a></li>
                       <li><a href="phenomene.html">Le phénomène social</a></li>
@@ -46,7 +46,7 @@
                 <article class="histoire">
                     <img src="./Images/scaloni.jpeg" alt="Lionel Scaloni">
                     <div class="text"><a href="histoire.html">
-                        <h2>Lionel Sebastián Scaloni</h2>
+                        <h2>Lionel Scaloni</h2>
                         <p>Né le 16 mai 1978 à Rosario, province de Santa Fe, est un footballeur 
                             international argentin devenu entraîneur.
                             En 2018, après des expériences ratées avec d’autres entraîneurs, l'AFA 
@@ -147,7 +147,7 @@
                         <h2><a href="fansite3.html">La Scaloneta</a></h2>
                     </div>
                     <ul>
-                        <li><a href="index.html">Accueil</a></li>
+                        <li><a href="fansite3.html">Accueil</a></li>
                         <li><a href="histoire.html">Un peu d'histoire</a></li>
                         <li><a href="worldcup.html">FIFA World Cup 2022</a></li>
                         <li><a href="phenomene.html">Le phénomène social</a></li>
