updates scaloneta, links et footer

--- a/index.html
+++ b/index.html
@@ -106,26 +106,24 @@
                     <p class="bordure-decalee"><img src="./images/unnamed.jpg" alt="Photo de La Scaloneta"></p>
                     <div class="contenu">
                         <h2>La Scaloneta</h2>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                            Integer lectus nisl, hendrerit eu ornare et, mollis ut tellus.
-                            Vivamus nec mauris id nisl tincidunt suscipit id vel eros.
+                        <p>Depuis 2018, Lionel Scaloni est le nouvel entraîneur de l'équipe de football 
+                            d'Argentine. D'abord en intérim, il fait peu à peu ses preuves et est 
+                            officiellement nommé en novembre.
                         </p>
-                        <p>
-                            Fusce ac egestas sapien. Phasellus in lorem ac turpis laoreet
-                            consectetur quis suscipit orci. Pellentesque consequat vulputate ligula,
-                            vitae fringilla nisl. Suspendisse aliquet arcu et nisi rhoncus consectetur.
-                            Phasellus viverra quam ut pretium volutpat. Etiam felis nulla, tincidunt
-                            eget molestie id, finibus eu orci. Fusce fermentum ullamcorper purus non suscipit.
-                            Ut vel sapien a lectus ornare cursus nec a elit. Maecenas ac diam id nisl elementum
-                            iaculis pulvinar vitae arcu. Donec interdum varius nisi sed egestas. Maecenas luctus
-                            ullamcorper erat, eu congue dolor accumsan ut. Curabitur accumsan lectus eros,
-                            eu accumsan leo consequat vitae. Praesent dignissim dolor risus, bibendum gravida
-                            enim efficitur non. Duis venenatis bibendum tellus eget volutpat.
+                        <p>Lors de la Copa América 2021, parmi les fans de l'équipe argentine, notamment sur 
+                            les réseaux sociaux, l'équipe de Lionel Scaloni a commencé à être comparée 
+                            de manière humoristique à un véhicule qui avance en ligne droite vers 
+                            l'atteinte de ses objectifs. Le nom de famille de l'entraîneur, 
+                            mélangé avec le mot « camion » (camioneta en espagnol), a donné 
+                            naissance au surnom de « Scaloneta » qui est utilisé dans la culture 
+                            populaire pour parler de l'équipe dirigée par Scaloni. 
+                            Les joueurs de l’équipe ont fini par reprendre ce terme pour parler d'eux-même.
+
                         </p>
                         <div class="lien">
-                            <button type="button"><a href="#">Lien 1</a></button>
-                            <button type="button"><a href="#">Lien 2</a></button>
-                            <button type="button"><a href="#">Lien 3</a></button>
+                            <button type="button"><a href="histoire.html">Un peu d'histoire</a></button>
+                            <button type="button"><a href="worldcup.html">FIFA World Cup 2022</a></button>
+                            <button type="button"><a href="phenomene.html">Le phénomène social</a></button>
                         </div>
                     </div>
                 </article>
@@ -136,39 +134,39 @@
         <footer>
             <section class="planSite">
                 <article class="menuFooter">
-                    <h2>Bienvenue</h2>
+                    <h2><a href="index.html">Bienvenue</a></h2>
                     <ul>
-                        <li>Blackpink</li>
-                        <li>EuroMillions</li>
-                        <li>La Scaloneta</li>
-                        <li>Contact</li>
+                        <li><a href="fansite1.html">Blackpink</a></li>
+                        <li><a href="fansite2.html">EuroMillions</a></li>
+                        <li><a href="fansite3.html">La Scaloneta</a></li>
+                        <li><a href="contact.html">Contact</a></li>
                     </ul>
                 </article>
                 <article class="menuBlackpink">
                     <h2>Blackpink</h2>
                     <ul>
-                        <li>Accueil</li>
-                        <li>Lien 1</li>
-                        <li>Lien 2</li>
-                        <li>Lien 3</li>
+                        <li><a href="fansite1.html">Accueil</a></li>
+                        <li><a href="">Lien 1</a></li>
+                        <li><a href="">Lien 2</a></li>
+                        <li><a href="">Lien 3</a></li>
                     </ul>
                 </article>
                 <article class="menuEuroMillions">
                     <h2>EuroMillions</h2>
                     <ul>
-                        <li>Accueil</li>
-                        <li>Lien 1</li>
-                        <li>Lien 2</li>
-                        <li>Lien 3</li>
+                        <li><a href="fansite2.html">Accueil</a></li>
+                        <li><a href="">Lien 1</a></li>
+                        <li><a href="">Lien 2</a></li>
+                        <li><a href="">Lien 3</a></li>
                     </ul>
                 </article>
                 <article class="menuScaloneta">
                     <h2>La Scaloneta</h2>
                     <ul>
-                        <li>Accueil</li>
-                        <li>Lien 1</li>
-                        <li>Lien 2</li>
-                        <li>Lien 3</li>
+                        <li><a href="fansite3.html">Accueil</a></li>
+                        <li><a href="histoire.html">Un peu d'histoire</a></li>
+                        <li><a href="worldcup.html">FIFA World Cup 2022</a></li>
+                        <li><a href="phenomene.html">Le phénomène social</a></li>
                     </ul>
                 </article>
             </section>
